Added New Version Manifest and Contex Menu

--- a/html/popup.html
+++ b/html/popup.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Release</title>
-
+    <title>AZRelease</title>
 </head>
 <body>
-    <h1>Copy.html</h1>
-    <button id="notifyButton">Dab de</button>
+    <h1>AZRelease Welcomes You!!</h1>
 </body>
-<script src="./copy.js"></script>
 </html>
