Added pop/js/html and content script

--- a/html/popup.html
+++ b/html/popup.html
@@ -6,6 +6,9 @@
     <title>AZRelease</title>
 </head>
 <body>
-    <h1>AZRelease Welcomes You!!</h1>
+   <div class="table">
+
+   </div>
 </body>
+<script src="./../js/popup.js"></script>
 </html>
